--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
+    "@reduxjs/toolkit": "^2.2.7",
     "apexcharts": "3.44.0",
+    "axios": "^1.7.7",
     "next": "14.2.9",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "18.2.19",
+    "@types/react": "18.2.21",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.9",
